# rote

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml  site.yml
bench/: conftest.py  test_paper_workload.py  test_serialize_microbench.py  test_workloads.py
bench/results/: cross_process_pipeline.json  paper_pipeline.json  serialize_microbench.json  w1_compute_pi.json  w2_polynomial_pi.json  w3_numpy_qr.json  w4_count_words.json  w5_matrix_invert.json
corpus/: c01_arithmetic.py  c02_recursion.py  c03_string_proc.py  c04_list_comprehensions.py  c05_dict_walk.py  c06_math_funcs.py  c07_csv_read.py  c08_set_ops.py  c09_numpy_basic.py  c10_sorting.py  c11_groupby.py  c12_fizzbuzz.py  c13_polynomial.py  c14_json_roundtrip.py  c15_text_pipeline.py  c16_nested_funcs.py  c17_class_methods.py  c18_iterator_chain.py  c19_decorator.py  c20_path_split.py  c21_dataclass.py  c22_generator.py  c23_exception_caught.py  c24_closures.py  c25_deep_nesting.py  c26_string_format.py  c27_kwargs.py  c28_tuple_unpack.py  c29_walrus.py  c30_match_stmt.py
docs/: BENCHMARKS.md  architecture.md  evaluation.md  migration_from_joblib.md
examples/: e1_compute_pi.py  e2_dataframe_pipeline.py  e3_recursive_fib.py  e4_numpy_pipeline.py  e5_decorator_demo.py
site/: .gitignore  DISCREPANCIES.md  README.md  astro.config.mjs  biome.json  package.json  playwright.config.ts  tsconfig.json  wrangler.toml
site/public/: robots.txt
site/scripts/: check.sh
site/src/components/: Banner.astro  DiscrepancyLog.astro  Footer.astro  HowItWorks.astro  PurityGates.astro  WhatItDoes.astro
site/src/components/islands/: AstHashEditor.tsx  CallGraph.tsx  EditRerunLoop.tsx  SerializerComparison.tsx  SpeedComparison.tsx
site/src/data/: bench.test.ts  bench.ts  discrepancies.ts  pipeline.ts
site/src/layouts/: Base.astro
site/src/lib/: canonical.test.ts  canonical.ts  format.ts  pyodide.ts
site/src/pages/: index.astro
site/src/styles/: global.css
site/tests/e2e/: dashboard.spec.ts
src/rote/: __init__.py  _impure_stdlib.py  autowrap.py  cli.py  config.py  identity.py  import_hook.py  jupyter.py  purity.py  serialize.py  session.py  store.py  trace.py
tests/: conftest.py
tests/correctness/: test_async.py  test_audit_fixes.py  test_callee_purity.py  test_codex_review_regressions.py  test_concurrency.py  test_differential.py  test_edge_cases.py  test_extreme_edges.py  test_global_state.py  test_memory_bounds.py  test_mutation_purity.py  test_perf_guard.py  test_perturbation.py  test_production_edges.py  test_purity_adversarial.py  test_transitive_invalidation.py  test_write_deps.py
tests/integration/: test_auto_mode_speedup.py  test_end_to_end.py  test_examples_run.py  test_file_deps.py  test_import_hook.py  test_jupyter.py
tests/property/: test_identity_properties.py  test_serialize_properties.py  test_store_properties.py
tests/unit/: test_config.py  test_identity.py  test_mem_cache_correctness.py  test_purity.py  test_serialize.py  test_session.py  test_store.py  test_trace.py
